# LightHistory

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  api.ts  demo.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  importer.rs  lib.rs  main.rs
src-tauri/tests/: import_real_data.rs
src/components/: Icon.vue  ImportView.vue  LibraryView.vue  StatsView.vue
