[package]
name = "lighthistory"
version = "0.1.0"
description = "LightHistory — 本地优先的 AI 对话资产管理器"
authors = ["云中江树"]
edition = "2021"

[lib]
name = "lighthistory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
